# cmdlang

./: .gitignore  .headache.config  .headache.dirs  .headache.exclude  .ocamlformat  CHANGES.md  CODEOWNERS  COPYING.HEADER  LICENSE  Makefile  README.md  cmdlang-cmdliner-runner.opam  cmdlang-dev.opam  cmdlang-stdlib-runner.opam  cmdlang-stdlib-runner.opam.template  cmdlang-tests.opam  cmdlang-to-base.opam  cmdlang-to-base.opam.template  cmdlang-to-climate.opam  cmdlang-to-climate.opam.template  cmdlang-to-cmdliner.opam  cmdlang-to-cmdliner.opam.template  cmdlang.opam  cmdlang.opam.template  commandlang-err.opam  commandlang-test.opam  commandlang-tests.opam  commandlang-to-base.opam  commandlang-to-climate.opam  commandlang-to-cmdliner.opam  commandlang.opam  dune-project  dune-workspace  dune-workspace-4.14  dune-workspace-5.2  dune-workspace-5.3  dunolint  err-cli.opam  err.opam  err0-handler.opam  (+2 more)
.github/: crs-config.json
.github/workflows/: ci.yml  crs.yml  deploy-doc.yml  dune-pkg-more-ci.yml  dunolint.yml  edit_dune_project_dot_ml  more-ci.yml  test-deploy-doc.yml
doc/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
doc/blog/: authors.yml  tags.yml
doc/blog/2024-08-07-hello/: index.md
doc/blog/2024-09-07-yet-another-cli/: index.md
doc/blog/2024-11-15-first-release/: index.md
doc/docs/explanation/: README.md  faq.md  future_plans.md
doc/docs/guides/: README.md
doc/docs/guides/usage-styles/: README.md  dune  prelude.txt
doc/docs/guides/usage-styles/lib/: dune  usage_styles.ml
doc/docs/reference/: dune  odoc.md  prelude.txt
doc/docs/tutorials/getting-started/: README.md  dune
doc/docs/tutorials/getting-started/lib/: dune  getting_started.ml  getting_started.mli
doc/src/pages/: index.md
doc/static/odoc/: index.html
lib/cmdlang/src/: command.ml  command.mli  dune
lib/cmdlang/test/: dune  test__command.ml
lib/cmdlang_ast/src/: ast.ml  ast.mli  dune
lib/cmdlang_ast/test/: dune
lib/cmdlang_cmdliner_runner/src/: cmdlang_cmdliner_runner.ml  cmdlang_cmdliner_runner.mli  dune
lib/cmdlang_cmdliner_runner/test/: dune
lib/cmdlang_stdlib_runner/src/: arg_runner.ml  arg_runner.mli  arg_state.ml  arg_state.mli  cmdlang_stdlib_runner.ml  cmdlang_stdlib_runner.mli  command_selector.ml  command_selector.mli  import.ml  import.mli  param_parser.ml  param_parser.mli  parser_state.ml  parser_state.mli  positional_state.ml  positional_state.mli
lib/cmdlang_stdlib_runner/test/: dune  test__param_parser.ml  test__positional_state.ml  test__stdlib_runner.ml
lib/cmdlang_to_base/src/: dune  translate.ml  translate.mli
lib/cmdlang_to_base/test/: dune  test__param.ml
lib/cmdlang_to_base/test/cram/: dune  run.t
lib/cmdlang_to_base/test/cram/src/: cmd.ml
lib/cmdlang_to_climate/src/: dune  translate.ml  translate.mli
lib/cmdlang_to_climate/test/: dune  test__param.ml
lib/cmdlang_to_cmdliner/src/: cmdlang_to_cmdliner.ml  cmdlang_to_cmdliner.mli  dune  translate.ml  translate.mli
lib/cmdlang_to_cmdliner/test/: dune  test__manpage_of_readme.ml  test__param.ml
lib/commandlang/src/: command.ml  command.mli  dune
lib/commandlang/test/: dune  test__command.ml
lib/commandlang_ast/src/: ast.ml  ast.mli  dune
lib/commandlang_ast/test/: dune
lib/commandlang_err/src/: dune  err.ml  err.mli
lib/commandlang_err/test/: dune  test__err.ml  test__exit_codes.ml  test__pp_of_sexp.ml
lib/commandlang_err/test/cram/: dune  main.ml  run.t
lib/commandlang_to_base/src/: dune  translate.ml  translate.mli
lib/commandlang_to_base/test/: dune
lib/commandlang_to_climate/src/: dune  translate.ml  translate.mli
lib/commandlang_to_climate/test/: dune
lib/commandlang_to_cmdliner/src/: commandlang_to_cmdliner.ml  commandlang_to_cmdliner.mli  dune  translate.ml  translate.mli
lib/commandlang_to_cmdliner/test/: dune  test__manpage_of_readme.ml
lib/err/src/: dune  err.ml  err.mli
lib/err/test/: dune  test__catching_err.ml  test__err.ml  test__exit_codes.ml  test__logs_level.ml  test__pp_of_sexp.ml
lib/err/test/cram/: dune  main.ml  run.t
lib/err0/src/: dune  err.ml  err.mli
lib/err0/test/: dune  test__err.ml  test__exit_codes.ml  test__pp_of_sexp.ml
lib/err0/test/cram/: dune  main.ml
lib/err0_handler/src/: dune  err_handler.ml  err_handler.mli
lib/err0_handler/test/: dune
lib/err_cli/src/: dune  err_cli.ml  err_cli.mli
lib/err_cli/test/: dune  test__err_cli.ml
script/ci-packages/: dune  rules.json  rules.schema.json  run.sh  run.t  test.expected  test.sh
src/cmdlang/: command.ml  command.mli
src/cmdlang-stdlib-runner/: arg_runner.ml  arg_state.mli  dune  import.mli  parser_state.mli  positional_state.ml
src/cmdlang-to-base/: dune  translate.mli
src/cmdlang-to-climate/: dune
src/cmdlang-to-cmdliner/: translate.ml  translate.mli
src/cmdlang/ast/: ast.mli
test/base/: dune  run.t
test/climate/: dune  run.t
test/cmdlang/: dune
test/cmdlang-stdlib-runner/: dune  test__param_parser.ml  test__stdlib_runner.ml
test/cmdlang-to-base/: dune  test__param.ml
test/cmdlang-to-base/cram/: run.t
test/cmdlang-to-base/cram/src/: cmd.ml  cmd.mli  dune
test/cmdlang-to-climate/: dune
test/cmdlang-to-cmdliner/: dune  test__manpage_of_readme.ml  test__param.mli
test/cmdlang/ast/: dune  test__ast.ml
test/cmdliner/: dune  run.t
test/common/: dune  test_command.ml
test/cram/: README.md  basic.t  const.t  doc.t  dune  enum.t  flags.t  group.t  main-help.t  named-opt.t  named-with-default.t
test/cram/deprecated/base/: run.t
test/cram/deprecated/climate/: dune
test/cram/deprecated/cmdliner/: run.t
test/cram/deprecated/common/: dune  test_command.ml  test_command.mli
test/cram/src/: cmd.ml  cmd.mli  dune
test/expect/: README.md  arg_test.ml  arg_test.mli  climate_non_ret.ml  climate_non_ret.mli  dune  test__applicative_operations.ml  test__cmd_name_with_underscore.ml  test__const.ml  test__flag.ml  test__help.ml  test__invalid_pos_opt.ml  test__named.ml  test__negative_int_args.ml  test__param.ml  test__pos.ml
