(library
 (name cmdlang_stdlib_runner)
 (public_name cmdlang-stdlib-runner)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Cmdlang_ast)
 (libraries cmdlang cmdlang_ast)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
