(library
 (name cmdlang_to_base)
 (public_name cmdlang-to-base)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Cmdlang_ast)
 (libraries base cmdlang cmdlang_ast core.command)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
