(rule
 (package cmdlang-tests)
 (action
  (copy bin/base/main_base.exe main_base.exe)))

(rule
 (package cmdlang-tests)
 (action
  (copy bin/climate/main_climate.exe main_climate.exe)))

(rule
 (package cmdlang-tests)
 (action
  (copy bin/cmdliner/main_cmdliner.exe main_cmdliner.exe)))

(rule
 (package cmdlang-tests)
 (action
  (copy bin/stdlib-runner/main_stdlib_runner.exe main_stdlib_runner.exe)))

(cram
 (package cmdlang-tests)
 (deps
  (package cmdlang)
  main_base.exe
  main_climate.exe
  main_cmdliner.exe
  main_stdlib_runner.exe))
