(library
 (name cmdlang_expect_tests)
 (public_name cmdlang-tests.expect-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66-32-60-69
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base)
 (libraries
  base
  core.command
  climate
  cmdlang
  cmdlang-to-base
  cmdlang-to-climate
  cmdlang-to-cmdliner
  cmdliner
  err
  err-cli
  expect_test_helpers_core.expect_test_helpers_base
  loc)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
