(library
 (name cmdlang_to_cmdliner)
 (public_name cmdlang-to-cmdliner)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Cmdlang_ast)
 (libraries cmdlang cmdlang_ast cmdliner)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
