(library
 (name commandlang)
 (public_name commandlang)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Commandlang_ast)
 (libraries commandlang_ast)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
