(library
 (name commandlang_err)
 (public_name commandlang-err)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Commandlang
  -open
  Sexplib0)
 (libraries commandlang sexplib0 stdune)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
