(library
 (name commandlang_to_climate)
 (public_name commandlang-to-climate)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Err0
  -open
  Commandlang_ast)
 (libraries climate commandlang commandlang_ast err0)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
