(library
 (name commandlang_to_cmdliner)
 (public_name commandlang-to-cmdliner)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Commandlang_ast)
 (libraries cmdliner commandlang commandlang.ast)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
