(library
 (name err0_test)
 (public_name commandlang-tests.err0_test)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Loc0
  -open
  Err0
  -open
  Err0_handler
  -open
  Expect_test_helpers_base)
 (libraries
  base
  cmdliner
  err0
  err0_handler
  expect_test_helpers_core.expect_test_helpers_base
  loc0
  stdune)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
