(library
 (name err0_handler)
 (public_name err0-handler)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Err0
  -open
  Commandlang
  -open
  Sexplib0)
 (libraries commandlang err0 sexplib0 stdune)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
