(library
 (name err_cli_test)
 (public_name cmdlang-tests.err_cli_test)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  cmdlang_to_cmdliner
  cmdliner
  err
  err_cli
  expect_test_helpers_core.expect_test_helpers_base
  loc
  stdune)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
