(library
 (name usage_styles)
 (public_name cmdlang-tests.usage_styles)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Cmdlang)
 (libraries cmdlang)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
